--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body {
     padding: 0;
     background-image: url('tax.jpg');
     background-size: cover;
-
+    background-blend-mode: overlay; /* or 'multiply', 'screen', etc. */
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity */
 }
+
 
 .transparent-header {
     background-color: rgba(255, 255, 255, 0.6); /* White with 60% opacity */
